he start of html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,16 @@
     Michael Stoker
 </head>
 <body>
-
+    <h1> Michael Stoker</h1>
+    <h2> Here for a good time not a long time, 
+        thats why I've chosen to become a software engineer</h2>
+        <br />
+        <h3>About me</h3>
+        <p>Hello, I am a 26 year old form the Yorkshire dales</p>
+        <p> I have got into coding through a friend that recommended me to it,
+            I am hoping to make a career out of it as i really enjoy the concept of 
+            coding
+        </p>
 </body>
 </Html>
 
